--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,5 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+@import 'cover';
