--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,13 +14,26 @@
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
 @import 'cover';
-
-.product-card {
-    .card-footer {
-        padding: 0.5rem;
-        height: 135px;
-    }
+.cart-page {
     .input-group-text {
         width: 83px;
     }
+    .product-form {
+        .card-footer {
+            padding: 0.5rem;
+            height: 135px;
+        }
+    }
+    .btn-remove-cart {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+    }
+}
+#my-alert {
+    position: fixed;
+    top: 10px;
+    right: 30px;
+    z-index: 2;
 }
