--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17028,14 +17028,18 @@ footer {
 
 .cart-page .product-form .card-footer {
   padding: 0.5rem;
-  height: 135px;
+  height: 190px;
 }
 
 .cart-page .btn-remove-cart {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 0;
   z-index: 1;
+}
+
+.cart-page .card-text {
+  line-height: 1;
 }
 
 #my-alert {
@@ -17043,5 +17047,35 @@ footer {
   top: 10px;
   right: 30px;
   z-index: 2;
+}
+
+.autocomplete-suggestions {
+  border: 1px solid #999;
+  background: #FFF;
+  overflow: auto;
+}
+
+.autocomplete-suggestion {
+  padding: 2px 5px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.autocomplete-selected {
+  background: #F0F0F0;
+}
+
+.autocomplete-suggestions strong {
+  font-weight: normal;
+  color: #3399FF;
+}
+
+.autocomplete-group {
+  padding: 2px 5px;
+}
+
+.autocomplete-group strong {
+  display: block;
+  border-bottom: 1px solid #000;
 }
 
