--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,34 @@
 @import 'cover';
 
 .cart-page {
+    .product-img-area {
+        width: 240px;
+        height: 180px;
+        margin: 15px 9px;
+        display: inline-block;
+        position: relative;
+        overflow: hidden;
+        -webkit-border-radius: 100%;
+        -moz-border-radius: 100%;
+        border-radius: 100%;
+        cursor: pointer;
+        background-repeat: no-repeat;
+        background-position-x: center;
+        background-position-y: center;
+        .bg-0, .bg-1 {
+            float: left;
+            left: 0;
+            width: 50%;
+            height: 100%;
+            background-repeat: no-repeat;
+        }
+        .bg-0 {
+            background-position-x: 30px;
+        }
+        .bg-1 {
+            background-position-x: -85px;
+        }
+    }
     .input-group-text {
         width: 83px;
     }
